Add baseHref for production

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/angular-search-and-display/",
               "budgets": [
                 {
                   "type": "initial",
